# pgspider

./: .gitattributes  .gitignore  .gitrevision  COPYRIGHT  INSTALL  LICENSE  README  README.md  Readme.md  configure  configure.ac  configure.in
contrib/: Makefile
contrib/oid2name/: oid2name.c
contrib/pg_standby/: pg_standby.c
contrib/pgspider_core_fdw/: Makefile  deparse.c  pgspider_core_compression_transfer.c  pgspider_core_compression_transfer.h  pgspider_core_fdw--1.0.sql  pgspider_core_fdw.c  pgspider_core_fdw.control  pgspider_core_fdw.h  pgspider_core_fdw_defs.h  pgspider_core_option.c  pgspider_core_remoteproc.c  pgspider_core_routing.c  pgspider_core_routing.h  pgspider_core_s3.cpp  pgspider_core_timemeasure.c  pgspider_core_timemeasure.h  test_migrate.sh  test_ported_postgres.sh  test_selectfunc.sh
contrib/pgspider_fdw/: Makefile  connection.c  deparse.c  meson.build  option.c  pgspider_data_compression_transfer.c  pgspider_data_compression_transfer.h  pgspider_fdw--1.0--1.1.sql  pgspider_fdw--1.0.sql  pgspider_fdw--1.1.sql  pgspider_fdw--1.2.sql  pgspider_fdw--1.3.sql  pgspider_fdw--1.4.sql  pgspider_fdw.c  pgspider_fdw.control  pgspider_fdw.h  shippable.c
contrib/pgspider_fdw/dct_targetdb/: dct_common.c  dct_common.h  dct_griddb.c  dct_griddb.h  dct_influxdb.c  dct_influxdb.h  dct_mysql.c  dct_mysql.h  dct_objstorage.c  dct_objstorage.h  dct_oracle.c  dct_oracle.h  dct_pgspider.c  dct_pgspider.h  dct_postgres.c  dct_postgres.h
contrib/pgspider_fdw/expected/: pgspider_fdw.out
contrib/pgspider_fdw/sql/: pgspider_fdw.sql
src/: Makefile
(+251 files in other folders)
